# target-nationbuilder

./: README.md  meltano.yml  pyproject.toml
sample_payload/: data.singer
target_nationbuilder/: auth.py  client.py  country_codes.json  exceptions.py  sinks.py  target.py  utils.py
target_nationbuilder/tests/: __init__.py  test_core.py
