[tool.poetry]
name = "target-nationbuilder"
version = "0.0.1"
description = "`target-nationbuilder` is a Singer target for Nationbuilder, built with the Meltano SDK for Singer Targets."
authors = ["Adil Ahmed"]
keywords = [
    "ELT",
    "Nationbuilder",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
hotglue-singer-sdk = "1.0.1"
hotglue-etl-exceptions = "0.1.0"
unidecode = "^1.3.8"
beautifulsoup4 = "^4.13.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"



[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_nationbuilder"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-nationbuilder = 'target_nationbuilder.target:TargetNationbuilder.cli'
